compass style hovering for area guide

--- a/areaguide.html
+++ b/areaguide.html
@@ -199,20 +199,127 @@
     </div>
   </div>
 
-  <div class="container1">
-    <img src="testingcat.jpg" alt="Avatar" class="image">
-    <div class="overlay">
-      <div class="text">Hello World</div>
+<div class="row">
+
+  <div class="col-sm-4"> </div>
+
+  <div class="col-sm-4"> 
+    <div class="container1">
+      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
+          <h3>Some places to live in North London are:</h3>
+          <ul>
+            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
+            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
+            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
+
+  <div class="col-sm-4"> </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col-sm-4"> 
+    <div class="container1">
+      <img src="assets/images/West.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
+          <h3>Some places to live in North London are:</h3>
+          <ul>
+            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
+            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
+            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4"> 
+    <div class="container1">
+      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
+          <h3>Some places to live in North London are:</h3>
+          <ul>
+            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
+            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
+            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="col-sm-4"> 
+    <div class="container1">
+      <img src="assets/images/East.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
+          <h3>Some places to live in North London are:</h3>
+          <ul>
+            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
+            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
+            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-sm-4"> </div>
+
+  <div class="col-sm-4"> 
+    <div class="container1">
+      <img src="assets/images/South.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">
+          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
+          <h3>Some places to live in North London are:</h3>
+          <ul>
+            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
+            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
+            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4"> </div>
+
+</div>
+
+
+
+
+
+
+
+
+
 
 <div class="row">
   <h3> North London </h3>
   <div class="col-md-12">
-    <p> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
+    <p2> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
   </div>
   <div class="col-md-6">
-    <p> Some places to live in North London are:</p>
+    <p2> Some places to live in North London are:</p>
     <ul>
       <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
       <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
@@ -222,11 +329,12 @@
   <div class="col-md-6">
   </div>
 </div>
+</div>
 
 <div class="row">
   <h3> South London </h3>
   <div class="col-md-12"> 
-    <p> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas.  </p> </br>
+    <p2> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas.  </p> </br>
   </div>
   <div class="col-md-6"></div>
  
