--- a/areaguide.html
+++ b/areaguide.html
@@ -231,12 +231,12 @@
       <img src="assets/images/West.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
-          <h3>Some places to live in North London are:</h3>
+          <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
+          <h3>Some places to live in West London are:</h3>
           <ul>
-            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+              <li> <strong>Notting Hill</strong> A lovely area to live and home of the exciting Notting Hill Carnival</li>
+              <li> <strong>Fulham</strong> lots of parks, two football clubs and some great pubs </li>
+              <li> <strong>Putney</strong> a quiet and green suburb, but not especially young or cool </li>
           </ul>
         </div>
       </div>
@@ -248,12 +248,12 @@
       <img src="assets/images/North.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
-          <h3>Some places to live in North London are:</h3>
+          <h3> If you want to be amongst all the famous sites, then Central London is for you. Beware of the tourists though! </h3>
+          <h3>Some places to live in Central London are:</h3>
           <ul>
-            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+              <li> <strong>Soho</strong> a happening restaurant and theatre district </li>
+              <li> <strong>Bloomsbury</strong> rub shoulders with the city's intellectuals </li>
+              <li> <strong>Marylebone</strong> famous for its quiet streets of majestic Georgian squares and terraces, pretty mews houses and Edwardian and Victorian mansion flats </li>
           </ul>
         </div>
       </div>
@@ -265,12 +265,12 @@
       <img src="assets/images/East.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
-          <h3>Some places to live in North London are:</h3>
+          <h3> Think hipsters and ecclectic bars and restaurants. </h3>
+          <h3>Some places to live in East London are:</h3>
           <ul>
-            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+          <li> <strong>Shoreditch</strong> hip bars and restaurants, boutique shops and galleries and the famous Brick Lane </li>
+      <li> <strong>Hackney</strong> the hang out of artists and creative-types </li>
+      <li> <strong>Stratford</strong> find your inner athlete near the site of the London Olympics! </li>
           </ul>
         </div>
       </div>
@@ -285,15 +285,16 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/South.jpg" alt="Avatar" class="image">
+      <img src="assets/images/South.jpg alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
-          <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
-          <h3>Some places to live in North London are:</h3>
+          <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
+          <h3>Some places to live in South London are:</h3>
           <ul>
-            <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-            <li> <strong>Camden</strong> famous for its market and nightlife </li>
+
+            <li> <strong>Battersea</strong> if you love the outdoors and nature </li>
+            <li> <strong>Peckham</strong> cosmopolitan, young and trendy </li>
+            <li> <strong>Brixton</strong> trendy with great nightlife </li>
           </ul>
         </div>
       </div>
@@ -313,23 +314,7 @@
 
 
 
-<div class="row">
-  <h3> North London </h3>
-  <div class="col-md-12">
-    <p2> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
-  </div>
-  <div class="col-md-6">
-    <p2> Some places to live in North London are:</p>
-    <ul>
-      <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-      <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-      <li> <strong>Camden</strong> famous for its market and nightlife </li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-  </div>
-</div>
-</div>
+
 
 <div class="row">
   <h3> South London </h3>
