Deleted " by accident

--- a/areaguide.html
+++ b/areaguide.html
@@ -285,7 +285,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/South.jpg alt="Avatar" class="image">
+      <img src="assets/images/South.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
