--- a/contactus.html
+++ b/contactus.html
@@ -194,27 +194,7 @@
 </div>
 
 
-<div class="container">
-  <form role='Name' >
-    <div class="form-group">
-      <label for="email">Name</label>
-      <input type="text" name="Name">
-    </div>
-    <div class ="form-group">
-      <label for="email">Email</label>
-      <input type="text" name="email" >
-    </div>
-    <div class ="form-group">
-      <label for="email">Message</label>
-      <input type="text" name="Message" >
-    </div>
-    <div class="form-group">
-    <button type="submit" class="btn btn-success">    Send</button>
-    </div>
-</form>
-</div>
-</div>
-</div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSemBN4nyA5nnT5epEuES4-56uhNI6xIEXzzkY4Hppcoi5mQGA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
 
