--- a/areaguide.html
+++ b/areaguide.html
@@ -187,7 +187,7 @@
 </div>
 
 
-
+<div class="container">
   <div class="row">
     <div class="col-md-12">
       <h3> Not sure where to start? </h3>
@@ -198,6 +198,7 @@
       </ul>
     </div>
   </div>
+</div>
 
   <div class="container1">
     <img src="testingcat.jpg" alt="Avatar" class="image">
@@ -209,7 +210,7 @@
 <div class="row">
   <h3> North London </h3>
   <div class="col-md-12">
-    <p> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
+    <p class="north_para"> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
   </div>
   <div class="col-md-6">
     <p> Some places to live in North London are:</p>
