Updated images to area guide

--- a/areaguide.html
+++ b/areaguide.html
@@ -206,7 +206,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <img src="assets/images/North_no_border.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
@@ -247,7 +247,7 @@
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/West.jpg" alt="Avatar" class="image">
+      <img src="assets/images/West_no_border.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
@@ -264,7 +264,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <img src="assets/images/Central_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> If you want to be amongst all the famous sites, then Central London is for you. Beware of the tourists though! </h3>
@@ -281,7 +281,7 @@
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/East.jpg" alt="Avatar" class="image">
+      <img src="assets/images/East_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> Think hipsters and ecclectic bars and restaurants. </h3>
@@ -304,7 +304,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/South.jpg" alt="Avatar" class="image">
+      <img src="assets/images/South_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
