Updated photos etc

--- a/areaguide.html
+++ b/areaguide.html
@@ -206,7 +206,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <img src="assets/images/North_no_border.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
@@ -221,29 +221,14 @@
     </div>
   </div>
 
-<div class="row">
-  <h3> North London </h3>
-  <div class="col-md-12">
-    <p class="north_para"> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </p></br>
-  </div>
-  <div class="col-md-6">
-    <p> Some places to live in North London are:</p>
-    <ul>
-      <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-      <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
-      <li> <strong>Camden</strong> famous for its market and nightlife </li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-  </div>
-  <div class="col-sm-4"> </div>
+    <div class="col-sm-4"> </div>
 </div>
 
 <div class="row">
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/West.jpg" alt="Avatar" class="image">
+      <img src="assets/images/West_no_border.png" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
@@ -260,7 +245,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/North.jpg" alt="Avatar" class="image">
+      <img src="assets/images/central_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> If you want to be amongst all the famous sites, then Central London is for you. Beware of the tourists though! </h3>
@@ -277,7 +262,7 @@
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/East.jpg" alt="Avatar" class="image">
+      <img src="assets/images/East_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> Think hipsters and ecclectic bars and restaurants. </h3>
@@ -300,7 +285,7 @@
 
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/South.jpg" alt="Avatar" class="image">
+      <img src="assets/images/South_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">
           <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
