Faded background, tidying containers etc

--- a/areaguide.html
+++ b/areaguide.html
@@ -185,25 +185,48 @@
   </a>
 </div>    
 </div>
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h3> Not sure where to start? </h3>
-      <p> Try these handy sites: </p>
+      <br />
+      <br />
+       <br />
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4> Not sure where to start? </h4>
+      <h4> Try these handy sites: </h4>
+      <h4>
       <ul>
-        <li> <strong> <a href="http://property.mapumental.com/">Mapumental </a> </strong> allows you to track your commute time from your work, school or favourite bar! </li>
-        <li> <strong> <a href="https://www.allinlondon.co.uk/boroughs/">All In London </a> </strong> gives you an overview of every London Borough</li>
+        <strong> <a href="http://property.mapumental.com/">Mapumental </a> </strong> allows you to track your commute time from your work, school or favourite bar! <br />
+        <strong> <a href="https://www.allinlondon.co.uk/boroughs/">All In London </a> </strong> gives you an overview of every London Borough 
+      </h4>
       </ul>
+      <br />
     </div>
   </div>
+  <div class="col-sm-3"> </div>
 </div>
+      <br />
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4>   Hover over the different areas of London to learn some fun facts about each area! </h4>
+      <br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
+<br />
+<br />
+<br />
+
 
 <div class="row">
 
   <div class="col-sm-4"> </div>
-
   <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/North_no_border.png" alt="Avatar" class="image">
