--- a/index.html
+++ b/index.html
@@ -187,11 +187,21 @@
 </div>    
 </div>
 
-<div class="container">
+<br />
 
-  <h3>You're moving to London!</h3>
-    <p>How exciting. We're here to help you navigate the process of finding a place to live in London.</p>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4>   You're moving to London! <br /> How exciting. We're here to help you navigate the process of finding a place to live in London. </h4>
+      <br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
 </div>
+
 
 
 <div class="container">
@@ -203,6 +213,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69333183026!2d-0.38178486230672587!3d51.52830796500685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2suk!4v1509918618041" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
 
+<br />
           <div class="col-sm-6">
             <a class="twitter-timeline" data-width="100%" data-height="500" href="https://twitter.com/TimeOutLondon?ref_src=twsrc%5Etfw">Tweets by TimeOutLondon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
@@ -214,14 +225,6 @@
 </div>
 
     
-
-<div class="container">
-  <form role='form'>
-    <label for="email">Subscribe for updates</label>
-    <input type="text" name="email" >
-    <button type="submit" class="btn btn-success">Send</button>
-  </form>
-</div>
 
 </body>
 
