--- a/contactus.html
+++ b/contactus.html
@@ -188,14 +188,30 @@
 </div>
 
 
+<br />
+<br />
+<br />
+<br />
+<br />
 
-    <p>Some text that I want to put in
-    xdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiudxdfdhghbwjiosducydghjasdiud</p>
+
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+     <div class="container">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2DpZsG22I1pELr3tBY5P5p7MAo_kOTfVHSvWH60QW1DJi8A/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+      <br />
+  </div>
+  <div class="col-sm-3"> </div>
 </div>
 
-<div class="container">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2DpZsG22I1pELr3tBY5P5p7MAo_kOTfVHSvWH60QW1DJi8A/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-</div>
+<br />
+<br />
+<br />
+
+
 
 
 
