--- a/importantstuff.html
+++ b/importantstuff.html
@@ -187,21 +187,26 @@
 </div>    
 </div>
 
-<div class="container">
+ <br />
 
-  <h3>You're moving to London!</h3>
-    <p>How exciting. We're here to help you navigate the process of finding a place to live in London.</p>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4>   ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !! ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !! </h4>
+      <br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
 </div>
+
+<br />
+<br />
+<br />
 
     
-
-<div class="container">
-  <form role='form'>
-    <label for="email">Subscribe for updates</label>
-    <input type="text" name="email" >
-    <button type="submit" class="btn btn-success">Send</button>
-  </form>
-</div>
 
 </body>
 
