--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
   </div>
 
 <div class="container">
+<div class="overlay"> 
+
+        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
+
+         <div class="row">
+          <div id="topbutton" class="col-sm-2"></div>
+            <div id="topbutton" class="col-sm-3">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="areaguide.html">
+                  <h2> Area Guide</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-3 top-buffer">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff</h2>        
+                </a>
+              </div>
+            </div>
+           <div class="col-sm-3 top-buffer">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
+                <div id="topbutton" class="col-sm-1"></div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+
+</div>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <ol class="carousel-indicators hidden-sm hidden-xs">
@@ -49,128 +83,19 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2> Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-           <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
        <div class="item">
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2> Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
 
     <div class="item">
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2> Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff </h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
     <div class="item">
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
-    </div>
   </div>
 
 
