Trying to get index.html overlay text inline with carousel but messed up areaguide

--- a/index.html
+++ b/index.html
@@ -37,37 +37,32 @@
 
 <div class="container">
 <div class="overlay"> 
-
-        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-
+        <h1>Living In London</h1>
+        <p>The overall guide for moving to London</p> 
          <div class="row">
-          <div id="topbutton" class="col-sm-2"></div>
-            <div id="topbutton" class="col-sm-3">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2> Area Guide</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-3 top-buffer">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
                   <h2> Important Stuff</h2>        
                 </a>
               </div>
             </div>
-           <div class="col-sm-3 top-buffer">
+           <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
-                <div id="topbutton" class="col-sm-1"></div>
                 </a>
               </div>
             </div>
           </div>
-
-
+</div>
 </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
